<resources>
    <string name="app_name">Physics</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="color_particles">Color particles by family</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Not registered yet?</string>
    <string name="user_name">Name</string>
    <string name="user_last_names">Last names</string>
    <string name="repeat_the_password">Repeat the password</string>
    <string name="err_invalid_username">Invalid username</string>
    <string name="err_invalid_password">Invalid password</string>
    <string name="err_login_data">Check the data</string>
    <string name="err_login">Incorrect user or password</string>
    <string name="err_password_mismatches">Passwords mismatches</string>
    <string name="sign_up">Sign Up</string>
    <string name="err_general">Something went wrong :( Try again</string>
    <string name="register_ok">User created successfully!</string>
    <string name="stars_life_phases">Stars life phases</string>
    <string name="stars_death_phases">Stars death phases</string>
    <string name="error_on_search">An error occurred :(</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="won_message">You won!</string>
    <string name="you_lose">You lose</string>
</resources>